Fixed display issue for tags on firefox

--- a/src/templates/joomlade/assets/less/joomlade/imports/tags.less
+++ b/src/templates/joomlade/assets/less/joomlade/imports/tags.less
@@ -9,6 +9,8 @@ ul.tags.inline a, ul.tags.inline span {
   text-transform:uppercase;
   font-weight: normal;
   color: white;
+  display: inline-block;
+  padding: 0.35em 0.6em 0.35em;
 }
 
 .label-info {
