--- a/src/templates/joomlade/css/joomlade.css
+++ b/src/templates/joomlade/css/joomlade.css
@@ -10194,6 +10194,8 @@ ul.tags.inline span {
   text-transform: uppercase;
   font-weight: normal;
   color: white;
+  display: inline-block;
+  padding: 0.35em 0.6em 0.35em;
 }
 .label-info {
   background: #196dab;
